Setup fb and instagram paths

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "samkough-social-media",
   "version": "1.0.0",
   "description": "sammy samkough's social media feeds",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Samkough/Samkough-Social-Media#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "request": "^2.88.0",
     "twit": "^2.2.11"
   }
 }
